--- a/src/br/com/davidbuzatto/jsge/examples/JSGEShowcaseWindow.form
+++ b/src/br/com/davidbuzatto/jsge/examples/JSGEShowcaseWindow.form
@@ -39,6 +39,7 @@
                   <Component id="btnCamera" alignment="0" max="32767" attributes="0"/>
                   <Component id="btnSoundAndMusic" alignment="0" max="32767" attributes="0"/>
                   <Component id="btnPaintingCapabilities" alignment="0" max="32767" attributes="0"/>
+                  <Component id="btnAnimations" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -71,6 +72,8 @@
               <Component id="btnCamera" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="btnSoundAndMusic" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="btnAnimations" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -172,6 +175,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSoundAndMusicActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnAnimations">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Animations"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAnimationsActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
