--- a/src/br/com/davidbuzatto/jsge/examples/JSGEShowcaseWindow.form
+++ b/src/br/com/davidbuzatto/jsge/examples/JSGEShowcaseWindow.form
@@ -40,6 +40,7 @@
                   <Component id="btnSoundAndMusic" alignment="0" max="32767" attributes="0"/>
                   <Component id="btnPaintingCapabilities" alignment="0" max="32767" attributes="0"/>
                   <Component id="btnAnimations" alignment="0" max="32767" attributes="0"/>
+                  <Component id="btnGamepads" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -74,6 +75,8 @@
               <Component id="btnSoundAndMusic" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="btnAnimations" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="btnGamepads" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
@@ -183,6 +186,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAnimationsActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnGamepads">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Gamepads"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnGamepadsActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
