--- a/src/br/com/davidbuzatto/jsge/examples/JSGEShowcaseWindow.form
+++ b/src/br/com/davidbuzatto/jsge/examples/JSGEShowcaseWindow.form
@@ -41,6 +41,7 @@
                   <Component id="btnPaintingCapabilities" alignment="0" max="32767" attributes="0"/>
                   <Component id="btnAnimations" alignment="0" max="32767" attributes="0"/>
                   <Component id="btnGamepads" alignment="0" max="32767" attributes="0"/>
+                  <Component id="btnCurveSmoothing" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -59,6 +60,8 @@
               <Component id="btnPaintingCapabilities" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="btnCollisionDetection" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="btnCurveSmoothing" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="btnImageLoadingAndProcessing" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
@@ -122,6 +125,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCollisionDetectionActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnCurveSmoothing">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Curve Smoothing"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCurveSmoothingActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnImageLoadingAndProcessing">
