licence header year update and IMGUI example

--- a/src/br/com/davidbuzatto/jsge/examples/JSGEShowcaseWindow.form
+++ b/src/br/com/davidbuzatto/jsge/examples/JSGEShowcaseWindow.form
@@ -43,6 +43,7 @@
                   <Component id="btnGamepads" alignment="0" max="32767" attributes="0"/>
                   <Component id="btnCurveSmoothing" alignment="0" max="32767" attributes="0"/>
                   <Component id="btnScissor" alignment="0" max="32767" attributes="0"/>
+                  <Component id="btnIMGUI" alignment="1" max="32767" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -67,6 +68,8 @@
               <Component id="btnImageLoadingAndProcessing" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="btnUserInteraction" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
+              <Component id="btnIMGUI" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="btnColorMethods" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
@@ -152,6 +155,14 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUserInteractionActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnIMGUI">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Immediate Mode Graphical User Interface (IMGUI)"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnIMGUIActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnColorMethods">
